Wed Mar 10 09:54:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/FastMap.x: FastMapNodeForKey() - special case for empty map
	return 0 immediately.  Fast for empty maps, marginally slower othrwise.
	* Source/NSProcessInfo.m: Removed [-debugArray], Added [-debugSet],
	Added GSDebugSet() function for rapid debug level testing.
	* Source/include/NSProcessInfo.h: Remove [-debugArray], Add [-debugSet]
	* Source/include/NSDebug.h: Rewrite NSDebugLog() and NSDebugLLog() to
	be much more efficient - now minimal performance impact.

1999-03-09  Adam Fedor  <fedor@gnu.org>

	* Source/include/NSObjCRuntime.h: Define some OpenStep cpp vars.
	* Source/include/NSException.h (NS_VALUERETURN): Fix.

Tue Mar  9  5:16:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* configure.in: Added tests for syslog
	* Source/include/config.h.in: Added definitions for syslog
	* Source/NSLog.m: Added locking for multi-thread serialisation and
	added syslog support when write to stderr fails.

1999-03-08  Adam Fedor  <fedor@gnu.org>

	* Merged dawn branch to main.

Wed Mar  3  5:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUser.m: Fixed a typo reported by twhite@rogers.wave.ca
	* Source/TcpPort.m: Fixed typos.

Tue Mar  2 15:07:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/TcpPort.m: If the host has no IP address, try finding the
	address of 'localhost' and, if that fails, use 127.0.0.1

Tue Mar  2 11:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSTimeZones/Makefile.postamble: Updated to preserve old localtime
	* NSTimeZones.tar: Updated to use the latest available zone info.

Tue Mar  2 08:04:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Merge in 'dawn' CVS branch.

Tue Feb 23  12:03:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/NSObject.h: Fixed bugin in ASSIGNCOPY() macro and added