@@ -1,3 +1,9 @@
+Thu Mar 11 10:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSDebug.m: Added two new functions for logging messags.
+	* Source/include/NSDebug.h: Added four new logging macros.
+	* Source/NSBundle.m: Updated to use new NSDebugMLLog() macro.
+
 Wed Mar 10 09:54:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/FastMap.x: FastMapNodeForKey() - special case for empty map
